<resources>
    <string name="app_name">Nykaa Product Details</string>
    <string name="enter_email">Enter Email</string>
    <string name="signin">Signin</string>
    <string name="signup">Signup</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Signup">SIGNUP</string>
    <string name="enter_password">Enter Password</string>
    <string name="title">Title</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_manufacture">Product Manufacture</string>
    <string name="product_country">Product Country</string>
    <string name="add">Add</string>
    <string name="productname">Productname</string>
    <string name="productprice">Productprice</string>
    <string name="productmanufacture">Productmanufacture</string>
    <string name="productcountry">Productcountry</string>
    <string name="textview">TextView</string>
</resources>